# ASIoP-ZDC-2

./: .gcloudignore  .gitignore  AGENT_PROMPT.md  Dockerfile  Makefile  README.md  SOURCE_MANIFEST.sha256  ZDC_accepted_xgb_study_package_20260711.zip.sha256  ZDC_blocked_study_package_20260711.zip.sha256  environment.lock.txt  pyproject.toml
configs/: legacy_vertex_default.yaml  study.yaml  vertex_kinetic_mse.yaml
docs/: ATTACHMENT_AUDIT.md  EVALUATION_PROTOCOL.md  EXECUTION_PLAN.md  FOURVECTOR_COMPONENT_METRICS_COMPARISON.md  KINETIC_MSE_RETRAIN.md  LEGACY_DATA_CONTRACT.md  LEGACY_EVALUATION_PROTOCOL.md  MC_ROOT_DATA_AND_VERTEX_FASTMC.md  MC_ROOT_DELIVERY_INDEX.md  MC_ROOT_VERTEX_QA_LOG.md  QC_LEDGER_10_PASSES.md  RAW_KINETIC_MSE_VERTEX_RESULTS.md  fast_mc_input_contract_v3.json
legacy_tests/: test_contracts_splits_metrics.py  test_geometry_features.py  test_physics.py
outputs/: ZDC_Accepted_XGB_Result_Presentation.pptx  ZDC_Accepted_XGB_Result_Presentation.pptx.inspect.ndjson  ZDC_All_Models_HEP_Comparison.pptx  ZDC_All_Neutron_Model_Deep_Dive.pptx  ZDC_Blocked_Rebuild_Presentation.pptx
outputs/metrics/: test_focus_summary.json  validation_leaderboard.csv
outputs/preflight/: accepted_inspection_report.json  accepted_schema.lock.yaml  (+2 more)
read me first/: MASTER_QC_CHECKLIST.md  MODEL_DESIGN.md  RESEARCH.md
tests/: test_core.py
tools/: generate_direct_kinetic_accuracy_plots.py
vertex/: Dockerfile.mc_root_analysis  cloudbuild.mc_root_analysis.yaml  cpu_preflight.template.yaml  mc_root_full_analysis.yaml  raw_kinetic_mse_train.yaml  t4_train.template.yaml
(+105 files in other folders)
